--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 			Dry&nbsp;&nbsp;&nbsp;<input type="range" id='mix' min="0.0" max="1.0" step="0.01" value="1.0" style="height: 20px; width: 200px;" onInput="crossfade( event.target.value );">&nbsp;&nbsp;&nbsp;Wet
 		</div>
 		<canvas id="view2" width="600" height="160"></canvas><br/>
-		<div>
+		<!--div>
 			<input type="radio" name="radioSet" value="data" 
 			onmousedown="analyserView1.setAnalysisType(ANALYSISTYPE_FREQUENCY); analyserView2.setAnalysisType(ANALYSISTYPE_FREQUENCY);">Frequency
 			<input type="radio" name="radioSet" value="data" checked="checked"
@@ -77,7 +77,7 @@
 			onmousedown="analyserView1.setAnalysisType(ANALYSISTYPE_3D_SONOGRAM); analyserView2.setAnalysisType(ANALYSISTYPE_3D_SONOGRAM);">3D Sonogram
 			<input type="radio" name="radioSet" value="data" 
 			onmousedown="analyserView1.setAnalysisType(ANALYSISTYPE_WAVEFORM); analyserView2.setAnalysisType(ANALYSISTYPE_WAVEFORM);">Waveform
-		</div>
+		</div-->
 	</div>
 	<div>
 		Todo:<br/>
