--- a/public/index.html
+++ b/public/index.html
@@ -62,12 +62,12 @@
 		<button ID="start2" disabled>Start Guitar</button>
 		<button ID="startStream" disabled>Start Stream</button>
 		<button ID="stop" disabled>Stop</button><br/>
-		<canvas id="view1" width="600" height="160"></canvas>
+		<!--canvas id="view1" width="600" height="160"></canvas-->
 		<div id="effectMix">
 			IR:&nbsp;&nbsp;&nbsp;<select id='IR'></select><button ID="update">Update List</button><br/>
 			Dry&nbsp;&nbsp;&nbsp;<input type="range" id='mix' min="0.0" max="1.0" step="0.01" value="1.0" style="height: 20px; width: 200px;" onInput="crossfade( event.target.value );">&nbsp;&nbsp;&nbsp;Wet
 		</div>
-		<canvas id="view2" width="600" height="160"></canvas><br/>
+		<!--canvas id="view2" width="600" height="160"></canvas><br/-->
 		<!--div>
 			<input type="radio" name="radioSet" value="data" 
 			onmousedown="analyserView1.setAnalysisType(ANALYSISTYPE_FREQUENCY); analyserView2.setAnalysisType(ANALYSISTYPE_FREQUENCY);">Frequency
@@ -84,6 +84,7 @@
 		<ul>
 		<li>clean load buffers & connections</li>
 		<li>dry/wet no clic</li>
+		<li>implement post-filters (lp, hp)</li>
 		</ul>
 	</div>
 
